refactor: 회고 생성, 수정 로직 최적화